[package]
name = "om-sd"
version = "0.1.0"
description = "Steepest descent search"
authors = ["Tokarev Artyom <tokarev28.art@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.14"
nalgebra = "0.22"
